# pptweaver

./: .gitignore  README.md  README_en.md  pyproject.toml  test.py
pptweaver/: __init__.py  cli.py  converter.py
pptweaver/elements/: base_processor.py  foreign_object_processor.py  image_processor.py  line_processor.py  oval_processor.py  path_processor.py  polygon_processor.py  rect_processor.py  text_processor.py
tests/integration/: test_advanced_conversions.py  test_simple_conversion.py
tests/samples/: all_elements.html  dark_background.html  multi_page.html  simple.html
tests/unit/: test_foreign_object_processor.py  test_image_processor.py  test_line_processor.py  test_oval_processor.py  test_path_processor.py  test_polygon_processor.py  test_rect_processor.py  test_text_processor.py
