[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pptweaver"
version = "0.1.0"
authors = [
  { name="huanghaozi", email="huang_hao_zi@outlook.com" },
]
description = "An innovative tool to weave your web content into editable PowerPoint presentations."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4",
    "lxml",
    "python-pptx",
    "playwright",
    "nest_asyncio",
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/huanghaozi/pptweaver" # Replace with your GitHub repo URL
"Bug Tracker" = "https://github.com/huanghaozi/pptweaver/issues" # Replace with your GitHub repo URL

[project.scripts]
pptweaver = "pptweaver.cli:main"
